PROD-3402: fix jump scroll for all chromium engine

--- a/src/components/chat/Chat.scss
+++ b/src/components/chat/Chat.scss
@@ -1136,7 +1136,7 @@
   overflow-y: hidden;
 }
 
-.lock-scroll-chrome {
+.lock-scroll-chromium {
   overflow-y: hidden;
   padding-right: 3px;
 }
